Skeleton overflow fixed

--- a/pictory-social/src/components/Loading/loading.css
+++ b/pictory-social/src/components/Loading/loading.css
@@ -4,6 +4,7 @@
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     margin: 30px 0;
+    overflow: hidden;
 }
 
 .postWrapper {
